src/test/compile-fail/const-recursive.rs
// error-pattern: recursive constant
const a: int = b;
const b: int = a;

fn main() {
}